k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-cicd
spec:
  selector:
    app: python-flask-cicd
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
