k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: python-flask.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-flask-cicd
                port:
                  number: 8000
